added migrations + updated structs + updated handlers/services
