# internal/web/tasks/api.gen.go
@@ -17,6 +17,12 @@ import (
 
 // RequestTaskBody defines model for RequestTaskBody.
 type RequestTaskBody struct {
+	Title  *string             `json:"title,omitempty"`
+	UserId *openapi_types.UUID `json:"user_id,omitempty"`
+}
+
+// RequestTitleUpdate defines model for RequestTitleUpdate.
+type RequestTitleUpdate struct {
 	Title *string `json:"title,omitempty"`
 }
 
@@ -25,6 +31,7 @@ type Task struct {
 	Id     *openapi_types.UUID `json:"id,omitempty"`
 	IsDone *bool               `json:"is_done,omitempty"`
 	Title  *string             `json:"title,omitempty"`
+	UserId *openapi_types.UUID `json:"user_id,omitempty"`
 }
 
 // GetTasksParams defines parameters for GetTasks.
@@ -36,7 +43,7 @@ type GetTasksParams struct {
 type CreateTaskJSONRequestBody = RequestTaskBody
 
 // UpdateTitleTaskByIdJSONRequestBody defines body for UpdateTitleTaskById for application/json ContentType.
-type UpdateTitleTaskByIdJSONRequestBody = RequestTaskBody
+type UpdateTitleTaskByIdJSONRequestBody = RequestTitleUpdate
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
@@ -58,6 +65,9 @@ type ServerInterface interface {
 	// Update Task's Title
 	// (PUT /tasks/{id})
 	UpdateTitleTaskById(ctx echo.Context, id openapi_types.UUID) error
+	// Get Tasks By User ID
+	// (GET /tasks/{user_id})
+	GetTasksByUserID(ctx echo.Context, userId openapi_types.UUID) error
 }
 
 // ServerInterfaceWrapper converts echo contexts to parameters.
@@ -156,6 +166,22 @@ func (w *ServerInterfaceWrapper) UpdateTitleTaskById(ctx echo.Context) error {
 	return err
 }
 
+// GetTasksByUserID converts echo context to params.
+func (w *ServerInterfaceWrapper) GetTasksByUserID(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "user_id" -------------
+	var userId openapi_types.UUID
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "user_id", runtime.ParamLocationPath, ctx.Param("user_id"), &userId)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter user_id: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshaled arguments
+	err = w.Handler.GetTasksByUserID(ctx, userId)
+	return err
+}
+
 // This is a simple interface which specifies echo.Route addition functions which
 // are present on both echo.Echo and echo.Group, since we want to allow using
 // either of them for path registration
@@ -190,6 +216,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.GET(baseURL+"/tasks/:id", wrapper.GetTaskById)
 	router.PATCH(baseURL+"/tasks/:id", wrapper.UpdateTaskCompletedById)
 	router.PUT(baseURL+"/tasks/:id", wrapper.UpdateTitleTaskById)
+	router.GET(baseURL+"/tasks/:user_id", wrapper.GetTasksByUserID)
 
 }
 
@@ -295,6 +322,23 @@ func (response UpdateTitleTaskById200JSONResponse) VisitUpdateTitleTaskByIdRespo
 	return json.NewEncoder(w).Encode(response)
 }
 
+type GetTasksByUserIDRequestObject struct {
+	UserId openapi_types.UUID `json:"user_id"`
+}
+
+type GetTasksByUserIDResponseObject interface {
+	VisitGetTasksByUserIDResponse(w http.ResponseWriter) error
+}
+
+type GetTasksByUserID200JSONResponse []Task
+
+func (response GetTasksByUserID200JSONResponse) VisitGetTasksByUserIDResponse(w http.ResponseWriter) error {
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(200)
+
+	return json.NewEncoder(w).Encode(response)
+}
+
 // StrictServerInterface represents all server handlers.
 type StrictServerInterface interface {
 	// Get All Tasks
@@ -315,6 +359,9 @@ type StrictServerInterface interface {
 	// Update Task's Title
 	// (PUT /tasks/{id})
 	UpdateTitleTaskById(ctx context.Context, request UpdateTitleTaskByIdRequestObject) (UpdateTitleTaskByIdResponseObject, error)
+	// Get Tasks By User ID
+	// (GET /tasks/{user_id})
+	GetTasksByUserID(ctx context.Context, request GetTasksByUserIDRequestObject) (GetTasksByUserIDResponseObject, error)
 }
 
 type StrictHandlerFunc = strictecho.StrictEchoHandlerFunc
@@ -483,6 +530,31 @@ func (sh *strictHandler) UpdateTitleTaskById(ctx echo.Context, id openapi_types.
 		return err
 	} else if validResponse, ok := response.(UpdateTitleTaskByIdResponseObject); ok {
 		return validResponse.VisitUpdateTitleTaskByIdResponse(ctx.Response())
+	} else if response != nil {
+		return fmt.Errorf("unexpected response type: %T", response)
+	}
+	return nil
+}
+
+// GetTasksByUserID operation middleware
+func (sh *strictHandler) GetTasksByUserID(ctx echo.Context, userId openapi_types.UUID) error {
+	var request GetTasksByUserIDRequestObject
+
+	request.UserId = userId
+
+	handler := func(ctx echo.Context, request interface{}) (interface{}, error) {
+		return sh.ssi.GetTasksByUserID(ctx.Request().Context(), request.(GetTasksByUserIDRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "GetTasksByUserID")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		return err
+	} else if validResponse, ok := response.(GetTasksByUserIDResponseObject); ok {
+		return validResponse.VisitGetTasksByUserIDResponse(ctx.Response())
 	} else if response != nil {
 		return fmt.Errorf("unexpected response type: %T", response)
 	}
